tests/error/linear_errors/unused_field3.err
Error: Drop violation (at $FILE:25:8)
   | 
23 | 
24 | @guppy(module)
25 | def foo(s: MyStruct1 @owned) -> int:
   |         ^^^^^^^^^^^^^^^^^^^ Field `s.x.q2` with non-droppable type `qubit` is leaked

Help: Make sure that `s.x.q2` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
